--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -1,48 +1,88 @@
 .product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 5fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 30px;
-  margin-right: 30px;
-  margin-left: 30px;
-  margin-top: 20px;
+  margin-top: 100px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
   .product-list {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
   }
 }
 
 @media (max-width: 480px) {
   .product-list {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 10px;
   }
 }
   
-  .product-card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 100%;
-  }
-  
-  .product-card img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-  }
-  
-  .product-card h2 {
-    font-size: 1.2rem;
-    margin: 0 0 10px;
-  }
-  
-  .product-card p {
-    font-size: 1rem;
-    margin: 0 0 10px;
-  }
-  
-  .product-card .price {
-    font-weight: bold;
-  }
+.product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  height: 90%;
+  transition: transform 0.2s ease;
+}
+
+.product-card:hover {
+  transform: translateY(-5px);
+}
+
+.product-card img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.product-card .info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.product-card h2 {
+  font-size: 1.2rem;
+  margin: 0 0 10px;
+}
+
+.product-card p {
+  font-size: 1rem;
+  margin: 0 0 10px;
+}
+
+.product-card .price {
+  font-weight: bold;
+}
+
+.product-card .category {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.product-card .add-to-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-card .add-to-cart label {
+  margin-right: 5px;
+}
+
+.product-card .add-to-cart input[type="checkbox"] {
+  margin-right: 10px;
+}
