--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,6 @@
 header {
   position: fixed;
   top: 0;
-  left: -10px;
   width: 100%;
   z-index: 1000;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -34,10 +33,32 @@ header {
   border: none;
   border-radius: 4px;
   padding: 12px 16px;
-  margin-right: 20px;
+  margin-right: 5px;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
+
+.auth-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    padding: 12px 16px;
+    margin-right: 20px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+  
+}
+
+.header_cart-button:hover {
+  background-color: #0062cc;
+}
+
 
 .header_cart-button:hover {
   background-color: #0062cc;
